--- a/palettebin/style.css
+++ b/palettebin/style.css
@@ -25,17 +25,32 @@ body {
   padding-bottom: 20vh;
 }
 
-.title {
-  font-size: 40px;
+.titlediv {
   position: fixed;
   top: 50px;
   left: 50px;
+}
+
+.title {
+  font-size: 40px;
   margin: 0;
   color: #8b9bb4;
   font-family: 'Dimitri';
   cursor: pointer;
   text-shadow: solid 2px white;
   text-decoration: none;
+  margin-bottom: 15px;
+}
+
+.library {
+  font-size: 15px;
+  text-decoration: none;
+  font-weight: 700;
+  color: #8b9bb4;
+}
+
+.library i {
+  margin-right: 10px;
 }
 
 .palettes {
@@ -119,7 +134,7 @@ body {
 }
 
 .colorInput {
-  width: 65px;
+  width: 60px;
   background: none;
   color: #ffffff;
   text-decoration: none;
@@ -131,13 +146,13 @@ body {
 }
 
 #inputPalette {
-  padding: 8px;
-  margin-left: 15px;
-  margin-right: 15px;
   border-radius: 5px;
   border: solid 1px white;
   width: auto;
   text-decoration: none;
+  display: inline;
+  padding: 10px 7px 10px 7px;
+  text-align: center;
 }
 
 #tagWhite {
@@ -227,6 +242,12 @@ body {
 .subColor {
   margin: 5px;
   font-weight: 700;
+}
+
+.nameColor {
+  margin: 10px;
+  font-weight: 700;
+  color: #8b9bb4;
 }
 
 .colorPreview {
