--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ About & Project allg
   background-image: url(images/prog.png);
   background-size: cover;
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   flex-direction: row;
   align-items: center;
   justify-content: center;
@@ -399,8 +399,6 @@ Projects-Allgemein
   text-align: center;
 }
 
-/* Einzelne Footer */
-
 .divProject .divFooter {
   -webkit-transition: opacity 0.5s ease-in-out;
   -moz-transition: opacity 0.5s ease-in-out;
@@ -417,6 +415,8 @@ Projects-Allgemein
   filter: alpha(opacity=100);
   opacity: 1;
 }
+
+/* Einzelne Footer */
 
 #proj1 {
   background-image: url(images/perfman2.png);
@@ -581,19 +581,4 @@ Parallax
 #img-4{
   z-index: -4;
   opacity: 60%;
-}
-/*
-
-MOBILE - VERSION
-
-*/
-
-
-@media (max-width: 25vh){
-  .txtTitle {
-    font-weight: 700;
-    font-size: 100px;
-    margin: 0px;
-    letter-spacing: 4px;
-  }
 }
