--- a/mobile.css
+++ b/mobile.css
@@ -18,12 +18,21 @@
     display: none;
   }
 }*/
+/* Mindest-Space benötigt um Title zu zeigen: */
+@media (max-width: 796px){
+  .txtTitle {
+    color: purple;
+  }
+}
+
+/* Alles darunter tablet? */
 @media (max-width: 1024px) {
   .txtTitle {
     color: green;
   }
 }
 
+/* Mobile */
 @media (max-width: 480px) {
   .txtTitle {
     color: red;
