--- a/mobile.css
+++ b/mobile.css
@@ -19,7 +19,15 @@
   }
 }*/
 
-/* Tablet & Mobile */
+/*
+320px — 480px: Mobile devices
+481px — 768px: iPads, Tablets
+769px — 1024px: Small screens, laptops
+1025px — 1200px: Desktops, large screens
+1201px and more —  Extra large screens, TV
+*/
+
+/* Small Screens, Tablets & Mobile */
 @media (max-width: 1024px) {
   .txtTitle {
     color: green;
@@ -28,7 +36,7 @@
     display: none;
   }
   .secHead {
-    height: 100vh;
+    height: auto;
   }
 }
 
