--- a/error.css
+++ b/error.css
@@ -8,19 +8,23 @@ a {
   text-decoration: none;
 }
 
+.titleimg {
+  margin-top: 100px;
+  width: 300px;
+}
 .title {
   color: #ffffff;
   font-weight: 400;
   font-size: 100px;
-  margin-top: 50px;
-  margin-bottom: 0px;
+  margin-top: 40px;
+  margin-bottom: 0;
 }
 
 .subtitle {
   color: #ffffff;
   font-weight: 600;
   font-size: 30px;
-  margin-top: 70px;
+  margin-top: 0px;
   margin-bottom: 30px;
 }
 
