--- a/style.css
+++ b/style.css
@@ -461,6 +461,10 @@ Projects-Allgemein
   background-image: url(images/palettebin.png);
 }
 
+#proj5 {
+  background-image: url(images/minitxt.png);
+}
+
 /*
 
 Cookies
