update ws2122 & presets

--- a/presets/style.css
+++ b/presets/style.css
@@ -6,6 +6,8 @@
 html, body {
     background-color: var(--background);
     color: var(--text);
+    margin: 0;
+    font-family: 'Barlow', sans-serif;
 }
 
 a, p, h1 {
