--- a/ws2122/style.css
+++ b/ws2122/style.css
@@ -7,6 +7,7 @@
   --ok: #3E8948;
   --notok: #2c4554;
   --notok2: #A22633;
+  --red: #E74C3C;
 }
 
 body {
@@ -18,6 +19,10 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   align-items: flex-start;
+}
+
+button, input,select,option {
+  font-family: 'Barlow', sans-serif;
 }
 
 button {
@@ -35,6 +40,7 @@ button {
 button:hover {
   color: var(--white);
 }
+
 
 .table {
   width: 1000px;
@@ -154,7 +160,7 @@ Fächer
  */
 
 .modules {
-  margin: 40px;
+  margin: 0 40px 0;
 }
 
 .moduleItem{
@@ -188,7 +194,7 @@ Fächer
 #ekvv { margin: 0; }
 
 .points {
-  margin: 40px 40px 0 40px;
+  margin: 0 40px 0 40px;
   align-items: center;
 }
 
@@ -216,7 +222,7 @@ Fächer
 
 .notes {
   max-width: 600px;
-  margin: 50px;
+  margin: 0 50px 0 50px;
   padding: 10px;
   outline: dotted var(--mid) 2px;
   color: var(--light);
@@ -224,11 +230,132 @@ Fächer
 
 .kalenderwoche {
   position: fixed;
-  right: 20px;
+  right: 50px;
   top: 10px;
   color: var(--light);
   padding: 5px;
   outline: solid var(--light) 1px;
+  margin: 10px;
+}
+
+#refresh {
+  position: fixed;
+  right: 10px;
+  top: 10px;
+  padding: 5px;
+  margin: 10px;
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: solid var(--light) 2px;
+  border-radius: 5px;
+}
+
+#refresh:hover {
+  background-color: var(--red);
+  border: none;
+}
+
+/*
+Task
+ */
+
+.tasks {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin: 0 40px 0 40px;
+}
+
+.task {
+  margin: 5px 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.task button, .submit {
+  width: 30px;
+  height: 30px;
+  margin-right: 5px;
+  background-color: transparent;
+  border: solid var(--light) 2px;
+  border-radius: 5px;
+}
+
+.task button:hover, .submit:hover {
+  border: solid var(--ok) 2px;
+  background-color: var(--ok);
+}
+
+.task button:hover i {
+  color: var(--white);
+}
+
+.taskTitle {
+  margin: 0 5px;
+  font-weight: 500;
+}
+
+.taskDate {
+  margin: 0 0 0 5px;
+  color: var(--light);
+}
+
+.outdatedBtn {
+  border: solid var(--notok2) 2px;
+}
+
+.outdated {
+  color: var(--red);
+}
+
+.taskInput {
+  margin: 5px;
+  display: flex;
+  align-items: center;
+}
+
+.taskInput input, select, option {
+  outline: none;
+  background-color: transparent;
+  color: var(--white);
+  border: solid var(--mid) 2px;
+  padding: 5px;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.taskInput input::placeholder {
+  color: var(--light);
+}
+
+option {
+  background-color: var(--dark);
+}
+
+#titleInput {
+  width: 300px;
+}
+
+#dateInput {
+  width: 60px;
+  text-align: center;
+  margin-left: 5px;
+}
+
+.title {
+  margin: 40px 0 30px 50px;
+  font-weight: 700;
+  font-size: 18px;
+  color: var(--light);
+  border-top: solid var(--mid) 1px;
+  padding: 10px 0;
+}
+
+#upperTitle {
+  margin: 50px 0 30px 50px;
 }
 
 /*
@@ -241,15 +368,6 @@ Mobile
     width: 100%;
   }
 
-  /*
-  .moduleTxt {
-    font-size: calc(14px + 2 * ((100vw - 320px) / 680));
-  }
-
-  .locationTxt, .subTxt, .headerItem p {
-    font-size: calc(12px + 2 * ((100vw - 320px) / 680));
-  }
-*/
   .modules {
     margin-top: 20px;
   }
@@ -314,6 +432,19 @@ Mobile
 
   .moduleTitle {
     margin: 3px;
+  }
+
+  .title {
+    text-align: center;
+    margin: 40px 0 20px 0;
+  }
+
+  #upperTitle {
+    margin: 50px 0 20px 0;
+  }
+
+  .taskInput {
+    display: none;
   }
 
 }
@@ -421,4 +552,8 @@ Fächerzuordnung
 
 .dropbox {
   background-color: #0099DB;
+}
+
+.matrix {
+  background-color: #1ABC9C;
 }
