--- a/style.css
+++ b/style.css
@@ -551,6 +551,10 @@ Projects-Allgemein
   background-image: url(images/minitxt.png);
 }
 
+#proj6 {
+  background-image: url(images/releasr.png);
+}
+
 /*
 
 Cookies
