updating ss2022 list

--- a/ss2022/style.css
+++ b/ss2022/style.css
@@ -623,12 +623,12 @@ Fächerzuordnung
 }
 
 .bs {
-  background-color: #e69138;
+  background-color: #da8021;
 }
 
 .bsTut {
   background-color: transparent;
-  outline: solid #e69138 5px;
+  outline: solid #da8021 5px;
 }
 
 .lr {
