--- a/ss2022/style.css
+++ b/ss2022/style.css
@@ -90,11 +90,15 @@ button:hover {
   padding: 0 10px;
 }
 
+.empty {
+  /*outline: solid var(--mid) 1px;*/
+}
+
 .item {
+  border: solid var(--mid) 1px;
   min-height: 140px;
   height: auto;
   width: 100%;
-  outline: solid var(--mid) 1px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -125,7 +129,7 @@ button:hover {
   font-size: 14px;
   color: var(--white);
   opacity: 50%;
-  margin: 0 10px 0 10px;
+  margin: 0 10px 5px 10px;
 }
 
 .moduleTime {
