--- a/style.css
+++ b/style.css
@@ -1,761 +1,205 @@
 :root {
-  --color1: #0054db;
-  --light: #4D88E6;
-  --color1trans: rgba(0,84,219,0.5);
-  --color2: #141e5c;
-  --white: #ffffff;
-  --grey: rgba(1,1,1,0.6);
-}
-
-/*
-@font-face {
-  font-family: "Nostromo Heavy";
-  src: url("fonts/nostromoHeavy.otf");
+    --light1: #C0CBDC;
+    --light2: #8B9BB4;
+    --mid: #5A6988;
+    --dark2: #3A4466;
+    --dark1: #262B44;
+    --link: #FF0044;
 }
 
 @font-face {
-  font-family: "Nostromo Bold";
-  src: url("fonts/nostromoBold.otf");
+    font-family: "Mungil";
+    src: url("fonts/Mungil-Regular.ttf");
+    /* Source: https://www.dafont.com/de/mungil.font */
 }
 
 @font-face {
-  font-family: "Nostromo Medium";
-  src: url("fonts/nostromoMedium.otf");
+    font-family: "Maybe Next";
+    src: url("fonts/Maybe-Next.ttf");
+    /* Source: https://www.dafont.com/de/maybe-next.font */
 }
 
-@font-face {
-  font-family: "Nostromo Light";
-  src: url("fonts/nostromoLight.otf");
+body, a, p, button {
+    font-family: 'Mungil', 'Maybe Next', sans-serif;
+    text-align: center;
 }
 
-@font-face {
-  font-family: "Nostromo Outline";
-  src: url("fonts/nostromoOutline.otf");
-}*/
-
-/* Allgmein */
 body {
-  margin: 0px;
-  font-family: 'Chakra Petch', sans-serif;
-  color: #ffffff;
-  overflow-x: hidden;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
-  /*Amimation*/
-  background: linear-gradient(180deg, var(--color1), var(--color2));
-  /*background: linear-gradient(0deg, #0054db, #db0000);*/
-	background-size: 100% 100%;
-	/*animation: gradient 20s ease infinite;*/
+    background-color: var(--light1);
 }
-
-/* Fancy Animation */
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 100%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
-}
-
-/* Text */
 
 p {
-  font-weight: 300;
-  font-size: 25px;
-  margin: 0px;
+    margin: 5px;
 }
 
-a {
-  text-decoration: none;
-  color: var(--white);
-  font-weight: 700;
-  font-size: 25px;
-  margin-top: 5px;
-  margin-bottom: 5px;
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
 }
 
-i {
-  margin-left: 5px;
-  margin-right: 5px;
+#mainContent {
+    width: 100vw;
+    height: 100vw;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
 }
 
-.txtHeader {
-  font-weight: 700;
-  letter-spacing: 2px;
-  font-size: 35px;
-  margin-top: 0;
-  margin-bottom: 30px;
-  text-transform: uppercase;
+#midContent {
+    flex-grow: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 50px;
 }
 
-/*
-
-Header
-
-*/
-
-.secHead {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.divLogo {
-  margin-left: 15vw;
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  align-self: center;
-  flex-grow: 2;
-  z-index: 3;
-}
-
-.logotxt {
-  align-self: center;
-}
-
-.divTitle {
-  margin: 0;
-  display: inline-block;
-}
-
-#logo {
-  width: 150px;
-  height: 150px;
-}
-
-.txtTitle {
-  font-weight: 700;
-  font-size: 70px;
-  margin: 0px;
-  letter-spacing: 4px;
-}
-
-.txtSubtitle {
-  font-weight: 300;
-  font-size: 25px;
-  letter-spacing: 2px;
-  margin: 0;
-}
-
-.txtHeader span {
-  color: rgba(255, 255, 255, 0.3);
-}
-
-/*
-
-Header: Social-Media
-
-*/
-
-.divSocials {
-  margin-right: 50px;
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  align-self: center;
-}
-
-.divSocials a {
-  font-weight: 500;
-  color: var(--light);
-}
-
-.divSocials i {
-  font-size: 50px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-@-webkit-keyframes blackWhite {
-  0% {color: var(--light);}
-  100% {color: var(--white);}
-}
-
-.divSocials a:hover {
-  color: white;
-  -webkit-animation-name: blackWhite;
-  -webkit-animation-duration: 0.5s;
-}
-
-.n0j0games {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: center;
-}
-
-.n0j0games img {
-  height: 30px;
-  margin-right: 15px;
-}
-
-/*
-
-About & Project allg
-
-*/
-
-.secAbout {
-  width: 100vw;
-  padding-top: 5vh;
-  padding-bottom: 5vh;
-  height: 90vh;
-  /*background-image: url(images/prog.png);*/
-  background-size: cover;
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-.subsecAbout {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  flex-grow: 2;
-  margin: 0 30px
-}
-
-.secProjectsTitle {
-  /*margin-top: 70px;
-  padding-top: 130px;
-  padding-bottom: 200px;
-  width: 100%;*/
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  flex-grow: 2;
-  /*background-color: var(--grey);*/
-  color: var(--white);
-  margin: 0 30px;
-}
-
-.line {
-  width: 2px;
-  height: 80vh;
-  background-color: var(--light);
-  border-radius: 5px;
-}
-
-/*
-
-About
-
-*/
-
-.newAboutHeader {
-  margin: 0 0 30px 0;
-  padding: 15px;
-  border: solid 2px var(--light);
-  border-radius: 10px;
-}
-
-.newAboutHeader p {
-  font-size: 18px;
-  font-weight: 300;
-  margin: 15px;
-}
-
-.newAboutCode {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-.newCodeSegment {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: 0 10px;
-  padding: 15px;
-  border: solid 2px var(--light);
-  border-radius: 10px;
-}
-
-@-webkit-keyframes blackWhiteBorder {
-  0% {border: solid 2px var(--light);}
-  100% {color: solid 2px var(--white);}
-}
-
-.newCodeSegment:hover, .newAboutHeader:hover {
-  border: solid 2px var(--white);
-  -webkit-animation-name: blackWhiteBorder;
-  -webkit-animation-duration: 1s;
-}
-
-.newCodeSegment p {
-  font-size: 20px;
-  margin-bottom: 10px;
-  font-weight: 500;
-  text-align: center;
-}
-
-.codeIcons {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-}
-
-.newCodeSegment i {
-  font-size: 40px;
-  margin: 0 7px;
-  color: var(--light);
-}
-
-.newCodeSegment i:hover {
-  color: white;
-  -webkit-animation-name: blackWhite;
-  -webkit-animation-duration: 0.5s;
-}
-
-.aboutText {
-  font-weight: 300;
-  font-size: 25px;
-  text-align: center;
-  margin-left: 15px;
-  margin-right: 15px;
-}
-
-.aboutName {
-  font-weight: 700;
-  font-size: 30px;
-}
-
-.aboutImg {
-  width: 50px;
-  margin-right: 15px;
-  border-radius: 10px;
-}
-
-.aboutTitle {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  margin-top: 40px;
-  margin-bottom: 20px;
-}
-
-.footer {
-  margin-top: 70px;
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-.footer a {
-  font-weight: 300;
-  font-size: 15px;
-}
-
-.footer span {
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.aboutSections {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-.aboutLeft {
-  margin-left: 10px;
-  margin-right: 10px;
-  align-items: center;
-  text-align: left;
-}
-
-.aboutRight {
-  margin-left: 10px;
-  margin-right: 10px;
-  align-items: center;
-  text-align: right;
-}
-
-h3 {
-  margin: 0;
-  margin-top: 30px;
-  font-size: 24px;
-  font-weight: 500;
-}
-
-h4 {
-  margin: 0;
-  font-size: 20px;
-  font-weight: 300;
-}
-
-h4 b {
-  margin: 0;
-  font-size: 20px;
-  font-weight: 500;
-}
-
-.bottom {
-  margin-top: 100px;
-}
-
-.bottom a, .bottom p {
-  color: var(--light);
-  font-size: 15px;
-  font-weight: 300;
-  display: inline;
-}
-
-.bottom a:hover {
-  color: var(--white);
-}
-
-.bottom a {
-  font-weight: 500;
-}
-
-.bottom i {
-  font-size: 15px;
-  margin: 2px;
-}
-
-/*
-
-Projects-Allgemein
-
-*/
-
-
-.secProjects {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.divProject {
-  margin: 20px;
-  width: 320px;
-  height: 180px;
-  background-color: #222222;
-  border-radius: 10px;
-  border-style: solid;
-  border-width: 2px;
-  border-color: var(--white);
-  align-self: center;
-  position: relative;
-  background-size: cover;
-}
-
-.divFooter {
-  background-color: var(--color1trans);
-  backdrop-filter: blur(10px);
-  width: 100%;
-  height: 50px;
-  border-radius: 8px;
-  position: absolute;
-  bottom: 0;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-}
-
-.divFooter a {
-  font-weight: 500;
-  font-size: 20px;
-  height: 20px;
-}
-
-.pSubinfos {
-  font-weight: 300;
-  font-size: 0px;
-  color: #dddddd;
-  font-style: italic;
-  margin-bottom: 5px;
-}
-
-.pDescription {
-  font-weight: 300;
-  font-size: 0px;
-  color: var(--white);
-  text-align: center;
-}
-
-.divProject .divFooter {
-  -webkit-transition: opacity 0.5s ease-in-out;
-  -moz-transition: opacity 0.5s ease-in-out;
-  -ms-transition: opacity 0.5s ease-in-out;
-  -o-transition: opacity 0.5s ease-in-out;
-  transition: opacity 0.5s ease-in-out;
-  filter: alpha(opacity=100);
-  opacity: 0;
-  zoom: 1;
-  height: 100%;
-}
-
-.divProject:hover .divFooter {
-  filter: alpha(opacity=100);
-  opacity: 1;
+#title {
+    color: var(--dark1);
+    font-size: 50px;
 }
 
-/* Einzelne Footer */
-
-#proj1 {
-  background-image: url(images/perfman2.png);
-}
-
-#proj2 {
-  background-image: url(images/prototype.png);
-}
-
-#proj3 {
-  background-image: url(images/smashteroid.png);
-}
-
-#proj4 {
-  background-image: url(images/palettebin.png);
-}
-
-#proj5 {
-  background-image: url(images/minitxt.png);
-}
-
-#proj6 {
-  background-image: url(images/releasr.png);
-}
-
-/*
-
-Cookies
-
-*/
-
-.cookiesDiv {
-  position: fixed;
-  right: 50px;
-  top: 50px;
-  display: inline;
-  padding: 10px;
-  margin: 0;
-  background: none;
-}
-
-.cookiesDiv:hover i:before {
-  content : "\f564";
-}
-
-.cookiesDiv p {
-  display: inline;
-  margin: 0;
-  font-weight: 300;
-  font-size: 15px;
-}
-
-.cookiesDiv:hover p {
-  display: none;
-}
-
-.cookiesDiv:hover button{
-  display: inline;
-}
-
-.cookiesDiv button {
-  display: none;
-  text-decoration: none;
-  border: none;
-  outline: none;
-  background: transparent;
-  color: white;
-  font-size: 15px;
-  font-weight: 300;
-  font-family: 'Chakra Petch', sans-serif;
+#subtitle {
+    color: var(--dark2);
+    font-size: 40px;
 }
 
-.cookiesDiv button:hover {
-  text-decoration: underline;
+#spotify {
+    position: fixed;
+    bottom: 50px;
+    display: none;
+    flex-direction: column;
 }
 
-.cookies {
-  position: fixed;
-  right: 50px;
-  top: 50px;
-  display: inline;
-  padding: 10px;
-  margin: 0;
-  background: none;
-  color: white;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-  outline: inherit;
-  transition: opacity 0.5s ease-in-out;
-  width: 300px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-end;
-  opacity: 0;
+#spotifySub {
+    display: flex;
+    flex-direction: row;
 }
 
-.cookies:active {
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
+#spotifyRight {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin: 0 0 15px 5px;
 }
 
-.cookies:hover i:before {
-  content : "\f564";
+#spotify img {
+    transform: rotate(-5deg);
+    width: 150px;
+    height: 150px;
 }
 
-.cookiesTxt {
-  display: inline;
-  margin: 0;
-  font-weight: 300;
-  font-size: 15px;
+#spotifyArtist {
+    color: var(--mid);
+    font-size: 30px;
+    margin: 0 0 2px 0;
 }
 
-.cookiesBefore {
-  display: inline;
-  margin: 0;
-  font-weight: 300;
-  font-size: 15px;
+#spotifyTitle {
+    color: var(--dark2);
+    font-size: 40px;
+    margin: 0 0 2px 10px;
+    text-decoration: none;
+    max-width: 400px;
+    text-align: left;
 }
 
-.cookies:hover .cookiesTxt:before {
-  content: "CLICK TO DISMISS";
+#spotifyTitle:hover {
+    color: var(--link);
 }
-
-.cookies:hover .cookiesBefore {
-  display: none;
-}
-
-i {
-  margin: 0;
-  margin-left: 10px;
-  font-size: 30px;
-  vertical-align: middle;
-}
-
 
-/*
-
-Scroll-Icon
-
-*/
-
-.scroll {
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%)
+.midText {
+    color: var(--mid);
+    font-size: 25px;
 }
 
-.scroll img {
-  width: 70px;
+#spotifyListeningTo {
+    margin: 0 0 20px 0;
 }
 
-::-webkit-scrollbar {
-  width: 10px;
+#spotifyAlbum{
+    max-width: 400px;
+    margin: 0 0 0 12px;
 }
 
-
-::-webkit-scrollbar-track {
-  background: linear-gradient(0deg, var(--color1), #db0000);
-  background: var(--color1);
-	background-size: 400% 100%;
+#leftContent {
+    position: fixed;
+    left: 0;
+    align-items: flex-start;
+    height: 100%;
+    cursor: pointer;
 }
 
-::-webkit-scrollbar-thumb {
-  background: rgba(255,255,255,0.3);
+.pixelArt {
+    transform: translateX(-30px);
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
 }
 
-::-webkit-scrollbar-thumb:hover {
-  background: #fff;
+#pixelArt0 {
+    left: -40px;
+    transform: rotate(-5deg);
+    z-index: 1;
+    top: 32%;
 }
-
-/*
 
-
-Parallax
-
-
-*/
-
-#scene{
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin: 0;
-  z-index: -1;
+#pixelArt1 {
+    left: -50px;
+    top: 48%;
+    transform: rotate(20deg);
+    z-index: 2;
 }
 
-.paraimg{
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  width: 100vw;
-  height: 100vh;
+#pixelArt2 {
+    left: 0;
+    top: 40%;
+    transform: rotate(-15deg);
+    z-index: 3;
 }
 
-#img-1{
-  z-index: -1;
+#arrowLeft {
+    position: absolute;
+    top: 60%;
+    left: 100px;
+    width: 120px;
+    height: 120px;
 }
 
-#img-2{
-  z-index: -2;
-  opacity: 90%;
+#arrowLeftText {
+    position: absolute;
+    top: 65%;
+    left: 220px;
 }
 
-#img-3{
-  z-index: -3;
-  opacity: 80%;
+#rightContent {
+    position: fixed;
+    right: 0;
+    align-items: flex-start;
+    height: 100%;
+    cursor: pointer;
 }
 
-#img-4{
-  z-index: -4;
-  opacity: 60%;
+#arrowRight {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    width: 120px;
+    height: 120px;
 }
 
-/* blend in effect */
-
-#blendIn{
-  z-index: 2;
-  background-color: black;
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
+#arrowRightText {
+    position: absolute;
+    top: 53%;
+    right: 120px;
 }
-
