add / refactoring uni page

--- a/uni/style.css
+++ b/uni/style.css
@@ -690,6 +690,10 @@ Fächerzuordnung
   background-color: #1ABC9C;
 }
 
+.gmanagement {
+  background-color: #73789A;
+}
+
 .redmine {
   background-color: #FF77A8;
   color: black;
