add / refactoring uni page

--- a/uni/style.css
+++ b/uni/style.css
@@ -648,11 +648,11 @@ Fächerzuordnung
   outline: solid #0098dc 5px;
 }
 
-.de {
+.ra {
   background-color: #cc4125;
 }
 
-.deTut {
+.raTut {
   background-color: transparent;
   outline: solid #cc4125 5px;
 }
